src/snapshots/ruff__linter__tests__B012_B012.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: JumpStatementInFinally
  location:
    row: 5
    column: 8
  end_location:
    row: 5
    column: 14
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 13
    column: 12
  end_location:
    row: 13
    column: 18
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 21
    column: 12
  end_location:
    row: 21
    column: 18
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 31
    column: 12
  end_location:
    row: 31
    column: 18
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 44
    column: 20
  end_location:
    row: 44
    column: 26
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 66
    column: 12
  end_location:
    row: 66
    column: 17
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 78
    column: 12
  end_location:
    row: 78
    column: 20
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 94
    column: 12
  end_location:
    row: 94
    column: 18
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 101
    column: 8
  end_location:
    row: 101
    column: 16
  fix: ~
- kind: JumpStatementInFinally
  location:
    row: 107
    column: 8
  end_location:
    row: 107
    column: 13
  fix: ~

