src/snapshots/ruff__linter__tests__B013_B013.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    RedundantTupleInExceptionHandler: ValueError
  location:
    row: 3
    column: 8
  end_location:
    row: 3
    column: 19
  fix:
    patch:
      content: ValueError
      location:
        row: 3
        column: 8
      end_location:
        row: 3
        column: 19
    applied: false

