src/snapshots/ruff__linter__tests__B015_B015.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UselessComparison
  location:
    row: 3
    column: 2
  end_location:
    row: 3
    column: 6
  fix: ~
- kind: UselessComparison
  location:
    row: 7
    column: 2
  end_location:
    row: 7
    column: 11
  fix: ~
- kind: UselessComparison
  location:
    row: 17
    column: 6
  end_location:
    row: 17
    column: 15
  fix: ~
- kind: UselessComparison
  location:
    row: 24
    column: 6
  end_location:
    row: 24
    column: 10
  fix: ~

