src/snapshots/ruff__linter__tests__B016_B016.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: CannotRaiseLiteral
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 11
  fix: ~
- kind: CannotRaiseLiteral
  location:
    row: 7
    column: 6
  end_location:
    row: 7
    column: 7
  fix: ~
- kind: CannotRaiseLiteral
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 14
  fix: ~

