src/snapshots/ruff__linter__tests__B017_B017.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoAssertRaisesException
  location:
    row: 22
    column: 9
  end_location:
    row: 25
    column: 5
  fix: ~

