src/snapshots/ruff__linter__tests__B020_B020.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ForLoopTargetOverridesIter: items
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 9
  fix: ~
- kind:
    ForLoopTargetOverridesIter: values
  location:
    row: 21
    column: 9
  end_location:
    row: 21
    column: 15
  fix: ~
- kind:
    ForLoopTargetOverridesIter: vars
  location:
    row: 36
    column: 4
  end_location:
    row: 36
    column: 8
  fix: ~

